--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <button id="save" class="btn">Salvar Assinatura</button>
     <button id="clear" class="btn">Limpar</button>
   </div>
+  <footer>
+    <p>Desenvolvido por Julio Rugolo</p>
+  </footer>
   <script src="signature_pad.min.js"></script>
   <script src="app.js"></script>
 </body>
