--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.1.7/dist/signature_pad.umd.min.js"></script>
-  <title>Assine  e Salve em PNG</title>
+  <title>Signature Pad</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,6 +15,7 @@
     </div>
     <button id="save" class="btn">Salvar Assinatura</button>
     <button id="clear" class="btn">Limpar</button>
+    <button id="send-email" class="btn">Enviar por Email</button>
   </div>
   <footer>
     <p>Desenvolvido por Julio Rugolo</p>
